samples/_failures_safe/1761196951_c23ea9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7a55746.c: In function ‘main’:
./samples/SAFE/__tmp_d7a55746.c:150:5: error: expected declaration or statement at end of input
  150 |     buffer_free(&decompressed);
      |     ^~~~~~~~~~~
